--- a/package.json
+++ b/package.json
@@ -1,4 +1,29 @@
 {
   "name": "md-links",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "description": "[Markdown](https://es.wikipedia.org/wiki/Markdown) es un lenguaje de marcado\r ligero muy popular entre developers. Es usado en muchísimas plataformas que\r manejan texto plano (GitHub, foros, blogs, ...), y es muy común\r encontrar varios archivos en ese formato en cualquier tipo de repositorio\r (empezando por el tradicional `README.md`).",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ameyallibg/CDMX007-fe-md-links.git"
+  },
+  "author": "AmeyalliBG",
+  "license": "ISC",
+  "bin": {
+    "md-links": "./cli.js"
+  },
+  "bugs": {
+    "url": "https://github.com/ameyallibg/CDMX007-fe-md-links/issues"
+  },
+  "homepage": "https://github.com/ameyallibg/CDMX007-fe-md-links#readme",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "node-fetch": "^2.3.0"
+  }
 }
