--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "AmeyalliBG",
   "license": "ISC",
   "bin": {
-    "md-links": "./cli.js"
+    "md-links": "./index.js"
   },
   "bugs": {
     "url": "https://github.com/ameyallibg/CDMX007-fe-md-links/issues"
